# nanocode

./: .gitignore  README.md  main.py  pyproject.toml
nanocode/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm_client.py  model.py
nanocode_py/: __init__.py  __main__.py  protocols.py  provider.py  tools.py
