[project]
name = "nanocode"
version = "0.1.0"
description = "Minimal AI coding assistant"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Taiyan Liu", email = "newromantics2001@gmail.com" }]
license = { text = "MIT" }
keywords = ["ai", "coding-assistant", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]

[project.scripts]
nanocode = "nanocode.__main__:main"

[project.urls]
Repository = "https://github.com/neoromantics/nanocode"

[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
